--- a/roles/secrets/defaults/main.yml
+++ b/roles/secrets/defaults/main.yml
@@ -4,7 +4,8 @@
 # Auth to cluster
 kubernetes_kubeconfig: "/home/{{ ansible_user }}/.kube/config"
 
-# Debug Manifest to STDOUT
+# Debug Manifest to ansible controller local file
+# WARNING, setting this to true, will write sensitive data to local file
 kubernetes_secrets_debug: false
 
 # Supported Secret Types
