--- a/roles/secrets/defaults/main.yml
+++ b/roles/secrets/defaults/main.yml
@@ -8,6 +8,17 @@ kubernetes_kubeconfig: "/home/{{ ansible_user }}/.kube/config"
 # WARNING, setting this to true, will write sensitive data to local file
 kubernetes_secrets_debug: false
 
+# This is a list of lists to generate secrets from
+kubernetes_secrets_lists:
+  - kubernetes_secrets
+
+kubernetes_secrets_create_missing_namespace: false
+
+# Example adding an extra list
+# kubernetes_secrets_lists:
+#   - kubernetes_secrets
+#   - kubernetes_secrets_extra
+
 # Supported Secret Types
 # - docker-registry
 # - generic
