--- a/roles/secrets/tasks/main.yml
+++ b/roles/secrets/tasks/main.yml
@@ -1,14 +1,22 @@
 ---
 # tasks file for secrets
 
-# Sensitive info: require explicit variable for output as opposed debug.verbosity
-# - name: Debug secret
-#   delegate_to: 'localhost'
-#   become: false
-#   ansible.builtin.debug:
-#     msg: |
-#       {{ (lookup('ansible.builtin.template', 'secrets.yml.j2') | to_nice_yaml).split('\n') }}
-#   when: "kubernetes_secrets_debug"
+# kubectl get ns - would be so much easier... but shell is bad :/
+- name: Get a list of current namespace
+  delegate_to: 'localhost'
+  become: false
+  kubernetes.core.k8s_info:
+    kubeconfig: "{{ kubernetes_kubeconfig }}"
+    kind: Namespace
+  register: namespace_list
+
+- name: Set Valid Namespace
+  ansible.builtin.set_fact:
+    valid_namespaces: "{{ lookup('template', 'valid-namespace-list.j2') }}"
+
+- name: Print Existing Namespace
+  ansible.builtin.debug:
+    msg: "{{ valid_namespaces | sort }}"
 
 - name: Debug Template
   delegate_to: 'localhost'
@@ -24,7 +32,7 @@
 # Create secrets from vars to k8s manifest
 # This requires python3-kubernetes
 - name: Create secret
-  no_log: false
+  no_log: true
   delegate_to: 'localhost'
   become: false
   kubernetes.core.k8s:
