--- a/galaxy.yml
+++ b/galaxy.yml
@@ -1,14 +1,14 @@
 ---
 namespace: mikejonesey
 name: kubernetes
-version: 1.0.8
+version: 1.0.9
 readme: README.md
 authors:
   - Michael Jones <mj@mikejonesey.co.uk>
 description: Install and maintenance of kubernetes clusters.
 license:
   - GPL-2.0-or-later
-tags: ['kubernetes', 'application', 'infrastructure', 'linux', 'tools']
+tags: ['kubernetes', 'K8s', 'application', 'infrastructure', 'linux', 'tools']
 dependencies:
   mikejonesey.helm_charts: ">=1.0.0"
 repository: https://github.com/mikejonesey/ansible-collection-kubernetes
