--- a/roles/containerd/tasks/main.yml
+++ b/roles/containerd/tasks/main.yml
@@ -22,62 +22,16 @@
       - containerd
       - runc
 
-- name: Update apt cache
-  ansible.builtin.apt:
-    update_cache: true
+# --- Sandbox Runtimes ---
 
-- name: Install dependancies
-  ansible.builtin.apt:
-    name: "{{ install_packages }}"
-    state: present
-  vars:
-    install_packages:
-      - apt-transport-https
-      - ca-certificates
-      - curl
-      - gnupg
-      - lsb-release
+- name: Add gVisor Runtime
+  ansible.builtin.include_tasks: runtime_gvisor/gvisor.yml
+  when: "kubernetes_containerd_sandbox_gvisor_enabled"
 
-# DOCKER REPO >> START >>
-- name: Docker Repo Setup
-  block:
-    - name: Fetch Docker APT Key
-      ansible.builtin.get_url:
-        url: https://download.docker.com/linux/debian/gpg
-        dest: /usr/share/keyrings/docker-archive-keyring.asc
-        mode: '0644'
-        force: true
-      register: fetch_output
+# --- containerd ---
 
-    - name: Install Docker APT Key
-      ansible.builtin.shell: |
-        set -o pipefail
-        cat /usr/share/keyrings/docker-archive-keyring.asc | gpg --batch --yes --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-      args:
-        executable: /bin/bash
-      register: dearmor_output
-      changed_when: "dearmor_output.rc == 0"
-
-    - name: Setup Docker Repo
-      ansible.builtin.copy:
-        dest: /etc/apt/sources.list.d/docker.list
-        content: >
-          deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg]
-          https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable
-        mode: "0644"
-
-    - name: Update apt cache
-      ansible.builtin.apt:
-        update_cache: true
-  rescue:
-    - name: Remove broken repo
-      ansible.builtin.file:
-        path: /etc/apt/sources.list.d/docker.list
-        state: absent
-    - name: Fail
-      ansible.builtin.fail:
-        msg: "Failed to add docker repository"
-# DOCKER REPO << END <<
+- name: Add Docker Repo
+  ansible.builtin.include_tasks: apt_repo_docker.yml
 
 - name: Install Containerd
   ansible.builtin.apt:
