--- a/roles/cluster_setup/tasks/master.yml
+++ b/roles/cluster_setup/tasks/master.yml
@@ -2,7 +2,7 @@
 
 - name: Upload kubadm-config
   ansible.builtin.template:
-    src: "k8s/kubeadm-config.yml.j2"
+    src: "{{ kubernetes_kubeadm_config_template }}"
     dest: "/root/kubeadm-config.yaml"
     owner: root
     group: root
